// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre <GifGrid /> Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    Dragon Ball
  </h2>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas sobre <GifGrid /> Debe mostrar items cuando se cargan las imágenes luego de la llamada de useFetchGifs 1`] = `
<Fragment>
  <h2>
    Dragon Ball
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={0}
      key="0"
      title="Imagen"
      url="https://imagen.jpg"
    />
  </div>
</Fragment>
`;
